--- a/forex24/webtrader.html
+++ b/forex24/webtrader.html
@@ -43,7 +43,41 @@
           </div>
         </div>
       </div>
+      <hr>
+      <h3>Advantages</h3>
+      <p class="webtrader__subtext"> Quando sei in movimento, ora puoi utilizzare il Forex Global Trader per Cell. di Forex24 per accedere a tutti i tuoi account MT4, utilizzando le tue crExperience lightning-fast trade execution. Award-winning HTML5 canvas-based charting with 50+ technical indicators. Easily view aggregated positions, pending orders, trade history and more.</p>
+      <div class="webtrader__flex">
+        <div class="webtrader__mockup"></div>
+        <div class="webtrader__text">
+          <b>Key features included:</b>
+          <ul>
+            <li>Works with any browser</li>
+            <li>No downloads, Flash  or Java required</li>
+            <li>You will keep your MT4 login and password</li>
+            <li>Trade directly from the chart</li>
+            <li>Multi-language support</li>
+            <li>View aggregated positions</li>
+            <li>Advanced "Close All" functionality</li>
+            <li>Real-time quotes and execution</li>
+            <li>Fully synchronized with MT4</li>
+            <li>Dynamic order routing</li>
+          </ul>
+        </div>
+      </div>
+      <hr>
+      <h3>Try It Now</h3>
+      <div class="webtrader__links">
+        <a class="webtrader__button  webtrader__button--green" href="#">
+          Real account<br>
+          <span>start live trading</span>
+        </a>
+        <a class="webtrader__button  webtrader__button--blue" href="#">
+          Demo account<br>
+          <span>start praccticing for free</span>
+        </a>
+      </div>
     </div>
   </section>
+  <!-- <script src="js/webtrader.js"></script> -->
 </body>
 </html>
