--- a/forex24/mobile.html
+++ b/forex24/mobile.html
@@ -16,7 +16,7 @@
         <div class="mobile__mockup-1"></div>
         <div class="mobile__text">
           <h2>User-friendly and Intuitive for Novices and Pros</h2>
-          <p>Follow your trading on your mobile device: iOS, Android and Windows Phone. Forex24 Global has developed this cutting-edge mobile application to be versatile enough to meet the needs of both beginners and experienced traders.You will enjoy using a clean, simple and professionally designed user interface.</p>
+          <p>Follow your trading on your mobile device: iOS, Android and Windows Phone. Forex24 has developed this cutting-edge mobile application to be versatile enough to meet the needs of both beginners and experienced traders.You will enjoy using a clean, simple and professionally designed user interface.</p>
         </div>
       </div>
       <div class="mobile__flex  mobile__flex--second">
