--- a/borsa/index.html
+++ b/borsa/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>BorsaPro</title>
   <link rel="stylesheet" href="css/style.min.css">
-  
   <!-- Slick -->
   <link rel="stylesheet" href="js/slick/slick.css"/>
   <link rel="stylesheet" href="js/slick/slick-theme.css"/>
@@ -50,7 +49,7 @@
             </ul>
             <ul class="main-nav__user">
               <li class="main-nav__item"><a class="button  button--header  button--green" href="#">Open account</a></li>
-              <li class="main-nav__item"><a class="button  button--header  button--gray" href="#">Sign In</a></li>
+              <li class="main-nav__item"><a class="button  button--header  button--gray" href="#">Log In</a></li>
             </ul>
           </div>
           
@@ -116,12 +115,15 @@
       <div class="edge__flex">
         <div class="edge__box  edge__box--1">
           <b>Multi-platform trading</b>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, explicabo voluptas ducimus et cumque ullam at suscipit? Velit, omnis tempore.</p>
         </div>
         <div class="edge__box  edge__box--2">
           <b>Trading signals</b>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, explicabo voluptas ducimus et cumque ullam at suscipit? Velit, omnis tempore.</p>
         </div>
         <div class="edge__box  edge__box--3">
           <b>Algo trading</b>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, explicabo voluptas ducimus et cumque ullam at suscipit? Velit, omnis tempore.</p>
         </div>
       </div>
     </div>
@@ -205,6 +207,68 @@
       </div>
     </div>
   </section>
+  <section class="news">
+    <div class="container">
+      <h1>Our latest news</h1>
+      <div class="news__slider">
+        <div class="news__box  news__box--1">
+          <img src="img/news-1.jpg" alt="">
+          <div class="news__content">
+            <header>
+              <time>FEB 15 2018</time>
+              <span>Excange</span>
+            </header>
+            <b>Lorem ipsum dolor sit amet gd consectetur adipisicing elit</b>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi dolor quo explicabo iste libero itaque amet, nulla aspernatur ab minus.</p>
+            <a class="button  button--news" href="#">Read More</a>
+          </div>
+        </div>
+        <div class="news__box  news__box--2">
+          <img src="img/news-2.jpg" alt="">
+          <div class="news__content">
+            <header>
+              <time>FEB 15 2018</time>
+              <span>Excange</span>
+            </header>
+            <b>Lorem ipsum dolor sit amet gd consectetur adipisicing elit</b>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi dolor quo explicabo iste libero itaque amet, nulla aspernatur ab minus.</p>
+            <a class="button  button--news" href="#">Read More</a>
+          </div>
+        </div>
+        <div class="news__box  news__box--3">
+          <img src="img/news-3.jpg" alt="">
+          <div class="news__content">
+            <header>
+              <time>FEB 15 2018</time>
+              <span>Excange</span>
+            </header>
+            <b>Lorem ipsum dolor sit amet gd consectetur adipisicing elit</b>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi dolor quo explicabo iste libero itaque amet, nulla aspernatur ab minus.</p>
+            <a class="button  button--news" href="#">Read More</a>
+          </div>
+        </div>
+        <div class="news__box  news__box--4">
+          <img src="img/news-1.jpg" alt="">
+          <div class="news__content">
+            <header>
+              <time>FEB 15 2018</time>
+              <span>Excange</span>
+            </header>
+            <b>Lorem ipsum dolor sit amet gd consectetur adipisicing elit</b>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi dolor quo explicabo iste libero itaque amet, nulla aspernatur ab minus.</p>
+            <a class="button  button--news" href="#">Read More</a>
+          </div>
+        </div>
+      </div>
+      <a class="news__all" href="#">View all news</a>
+    </div>
+  </section>
+  <section class="quote">
+    <div class="container">
+      <h1>Trade with confidence on the world's<br>leading social trading network</h1>
+      <a href="#">Join now</a>
+    </div>
+  </section>
   <section class="payment">
     <div class="container">
       <div class="payment__flex">
@@ -253,7 +317,7 @@
       <h1>Risk Warning:</h1>
       <p>Forex and “Contract for Differences (CFDs) are usually leveraged products. Trading in Forex and Over-The-Counter (OTC) CFDs related to commodities carry a high level of risk and can result in the loss of all of your investment. As such, Forex and such CFDs may not be appropriate for all investors. You should not invest money that you cannot afford to lose. Before deciding to trade, you should become aware of all the risks associated with Forex and OTC CFD trading, and seek advice from an independent and suitably licensed financial advisor”. Past performance does not constitute a reliable indicator of future results. Future forecasts do not constitute a reliable indicator of future performance.</p>
     </div>
-    <p class="footer__copyright">© 2017 ALL right reserved BorsaPro</p>
+    <p class="footer__copyright">© 2018 ALL right reserved BorsaPro</p>
   </footer>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
