--- a/bb/index.html
+++ b/bb/index.html
@@ -35,7 +35,7 @@
   </header>
   <section class="title">
     <div class="container">
-      <h1>Be a broker in 7 days</h1>
+      <h1>Become a successful broker</h1>
       <b>Run your own Forex | CFD | Bitcoin Brand</b>
       <div class="title__links">
         <a class="btn  btn--click" href="#">Register</a>
