--- a/borsa/accounts/trade-with-borsapro.html
+++ b/borsa/accounts/trade-with-borsapro.html
@@ -58,40 +58,25 @@
       </div>
     </div>
   </header>
-  <section class="title  title--mobile"></section>
-  <section class="mobile">
+  <section class="title  title--trade">
     <div class="container">
-      <div class="mobile__flex">
-        <div class="mobile__meta"></div>
-        <div class="mobile__text">
-          <h1>BorsaPro Trading Mobile Application: The freedom to trade at any time and place.</h1>
-          <p>
-            <b>Don`t miss out – start making trades from your mobile device, no matter if it`s Apple or Android.</b><br>
-            BorsaPro`s mobile software gives you the opportunity to invest, operate your profile and check the latest economic trends, no matter where you are or what time it is, and it`s all without a charge. The potential of the software is sure to cater to any trader, from a beginner to an experienced veteran. Simple and intuitive are the keywords here.
-          </p>
-          <p>The software is available for all devices – Apple products, as well as Android phones and tablets.</p>
-          <a href="#"></a>
-          <a href="#"></a>
-          <p>Get informed about the latest market events, and act accordingly. Invest from your mobile device, no matter where you are.</p>
-          <b>Invest in a wide selection of instruments and enter the global markets. Integrated chartings with symbols, along with technical stats and the latest economic trends will aid you in choosing if you should open or close a given position. Also, using your mobile device to trade is totally safe and private.</b>
-          <ul>
-            <li>Use your mobile device to invest in a variety of financial instruments – Forex, Futures and Commodities.</li>
-            <li>Simple usage and navigation.</li>
-            <li>You can start trading immediately after logging in.</li>
-          </ul>
-          <h2>Easy to use, Extensive & Functional:</h2>
-          <ul>
-            <li>Perfectly safe Forex investment.</li>
-            <li>More than thirty indicators.</li>
-            <li>Timely quotes.</li>
-            <li>Logs of all the investments.</li>
-            <li>Invest by using the latest chartings.</li>
-            <li>Every order type is available.</li>
-            <li>Some features can be used without internet.</li>
-            <li>Swift usage and pleasant interface.</li>
-          </ul>
-        </div>
-      </div>
+      <h1>Trade with <b>BorsaPro</b></h1>
+    </div>
+  </section>
+  <section class="trade">
+    <div class="container">
+      <p>BorsaPro presents its users with the optimal platform for investing in <b>Forex</b>, <b>Futures</b> and <b>Commodities</b>. We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
+      <h2>BorsaPro gives you:</h2>
+      <ul>
+        <li>Means for investing in forex, futures and indices on a wide number of international marketplaces.</li>
+        <li>Top notch trade platform, available on all relevant devices – PC, Mac, Android and Apple phones.</li>
+        <li>Timely reports and indicators, which let you closely follow how your trade develops with each signal, along with vital success strategies.</li>
+        <li>A personalized education system – massive amounts of trading information at your disposal.</li>
+        <li>Superior request processing and spreads.</li>
+        <li>Algo Trading – a clever computer program which aids you by making trading faster and better overall.</li>
+        <li>Various account choices, catering to each user`s specific circumstances. You can also change the type of your account if there is a need.</li>
+        <li>Excellent user care and technical support, which let you focus on trading and feel safe.</li>
+      </ul>
     </div>
   </section>
   <section class="payment">
