--- a/borsa/accounts/trade-with-borsapro.html
+++ b/borsa/accounts/trade-with-borsapro.html
@@ -129,6 +129,6 @@
     </div>
     <p class="footer__copyright">© 2018 ALL right reserved BorsaPro</p>
   </footer>
-  <script src="js/mobile-menu.js"></script>
+  <script src="../js/mobile-menu.js"></script>
 </body>
 </html>
