--- a/borsa/accounts/account-types.html
+++ b/borsa/accounts/account-types.html
@@ -11,7 +11,9 @@
   <header class="header">
     <div class="container">
       <div class="header__flex">
-        <img src="../img/logo.png" width="226" height="76" alt="BorsaPro">
+        <a href="../index.html">
+          <img src="../img/logo.png" width="226" height="76" alt="BorsaPro">
+        </a>
         <nav class="main-nav__wrapper  page-header__main-nav  main-nav--closed  main-nav--nojs">
           <button class="main-nav__toggle" type="button">Open menu</button>
           <div class="main-nav__container">
