--- a/mb/index.html
+++ b/mb/index.html
@@ -82,6 +82,7 @@
   </section>
   <section class="price">
     <div class="container">
+      <b class="price__title-m">Цена биткоина<br>меняется каждую минуту!<br><br>И на этом можно заработать!</b>
       <div class="price__flex">
         <div class="price__left">
           <img src="img/price-bitcoin.png" alt="Bitcoin">
@@ -101,7 +102,7 @@
           <b>И на этом можно заработать!</b>
           <p>Выбирайте любой актив из сотен доступных и<br>зарабатывайте на его ценовом колебании!</p>
           <div class="price__select">
-            <div class="price__flex">
+            <div class="price__flex  price__flex--select">
               <p class="price__name">Bitcoin</p>
               <p class="price__value">8943.2377024$</p>
             </div>
