--- a/mb/index.html
+++ b/mb/index.html
@@ -17,6 +17,9 @@
   <meta name="msapplication-TileColor" content="#051c4f">
   <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
   <meta name="theme-color" content="#051c4f">
+  <!-- Slick -->
+  <link rel="stylesheet" href="js/slick/slick.css"/>
+  <link rel="stylesheet" href="js/slick/slick-theme.css"/>
 </head>
 <body>
   <header class="header">
@@ -206,5 +209,8 @@
       
     </div>
   </footer>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/slick/slick.min.js"></script>
+  <script src="js/slider.js"></script>
 </body>
 </html>
