--- a/mb/index.html
+++ b/mb/index.html
@@ -201,6 +201,35 @@
         </div>
       </div>
       <hr>
+      <!-- Slider on Mobile -->
+      <div class="type__flex  type__flex--mobile">
+        <div class="type__box">
+          <header>
+            <h2>Silver</h2>
+          </header>
+          <hr>
+          <p>Минимальная сумма к<br>пополнению</p>
+          <b>500$</b>
+          <a class="button  button--unclick" href="#">Открыть счет</a>
+        </div>
+        <div class="type__box  type__box--center">
+          <header>
+            <h2>Gold</h2>
+          </header>
+          <p>Минимальная сумма к<br>пополнению</p>
+          <b>10 000$</b>
+          <a class="button  button--click" href="#">Открыть счет</a>
+        </div>
+        <div class="type__box">
+          <header>
+            <h2>Platinum</h2>
+          </header>
+          <hr>
+          <p>Минимальная сумма к<br>пополнению</p>
+          <b>50 000$</b>
+          <a class="button  button--unclick" href="#">Открыть счет</a>
+        </div>
+      </div>
       <a class="button  button--unclick" href="#">Подробнее о типах счетов</a>
     </div>
   </section>
