--- a/mb/index.html
+++ b/mb/index.html
@@ -235,7 +235,59 @@
   </section>
   <footer class="footer">
     <div class="container">
-      
+      <div class="footer__payment">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+        <hr>
+      <div class="footer__links">
+        <ul>
+          <li><b>Торговля</b></li>
+          <li><a href="#">Типы счетов</a></li>
+          <li><a href="#">Контакты</a></li>
+          <li><a href="#">Почему мы</a></li>
+        </ul>
+        <ul>
+          <li><b>Обучение</b></li>
+          <li><a href="#">Активы</a></li>
+          <li><a href="#">Стратегии</a></li>
+          <li><a href="#">Индикаторы</a></li>
+          <li><a href="#">Статьи</a></li>
+        </ul>
+        <ul>
+          <li><b>Юридическая информация</b></li>
+          <li><a href="#">Политика AML и KYC</a></li>
+          <li><a href="#">Политика конфиденциальности</a></li>
+          <li><a href="#">Отказ от ответственности</a></li>
+          <li><a href="#">Клиентское соглашение</a></li>
+        </ul>
+      </div>
+        <hr>
+      <ul>
+        <li><b>Служба поддержки:</b></li>
+        <li><a href="tel:74996097696"></a></li>
+        <li><a href="mailto:support@masterbinary.net">support@masterbinary.net</a></li>
+        <li><a href="mailto:support@masterbinary.ru">support@masterbinary.ru</a></li>
+      </ul>
+      <div class="footer__info">
+        <div class="footer__left">
+          <b>Уведомление о рисках:</b>
+          <p>Операции, предлагаемые данным сайтом, могут осуществляться исключительно полностью дееспособными совершеннолетними (достигшими 18 лет) лицами. Операции с финансовыми инструментами, предлагаемые данным сайтом могут считаться операциями с высоким риском. При совершении таких операций существуют риски частичной либо полной потери денежных средств. Соответственно, настоятельно рекомендуется удерживаться от инвестирования и торговли теми средствами, потерю которых в случае неблагоприятного исхода таких торгов вы не можете себе позволить.</p>
+          <p>Рекомендуем внимательно ознакомиться с нашими условиями и положениями, уведомлением о рисках, клиентским соглашением, политикой конфиденциальности и политикой AML и KYC прежде чем приступить к совершению операций на данном сайте.</p>
+          <p>Сайт http://masterbinary.ru является торговой маркой, данный сайт является собственностью компании TGI Intelligent Solution LTD, Suite 305, Griffith Corporate Centre, P.O. Box 1510, Beachmont, Kingstown, Saint Vincent and the Grenadines.</p>
+        </div>
+        <div class="footer__right">
+          <p>Управление и платежный агент сайта http://masterbinary.ru компания Kurbanas UAB, регистрационный номер 304404840, местонахождение : 60 Laisves ave., Vilnius, m. sav, Lithuania.</p>
+          <p>Компания TGI Intelligent Solution LTD а также сайт http://masterbinary.ru не оказывают какие-либо услуг гражданам и жителям США, Канады, Австралии, Бельгии, Франции, Турции, Израиля, Сирии, Судана, Ирана, Северной Кореи Японии, а также других стран и юрисдикций, где указанные услуг не могут быть оказаны в силу действующего законодательства.</p>
+          <a href="#"></a>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <img src="logo-f" alt="MasterBinary">
+        <p>Copyright ©2017 Master Binary.<br>All Rights Reserved.</p>
+      </div>
     </div>
   </footer>
   <script src="js/jquery.min.js"></script>
