--- a/mb/index.html
+++ b/mb/index.html
@@ -236,10 +236,10 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__payment">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="img/footer-mc.png" width="60" alt="MasterCard">
+        <img src="img/footer-ms.png" width="80" alt="MasterCard Secure">
+        <img src="img/footer-vs.png" width="64" alt="Visa">
+        <img src="img/footer-vf.png" width="67" alt="Visa Verified">
       </div>
         <hr>
       <div class="footer__links">
@@ -265,12 +265,13 @@
         </ul>
       </div>
         <hr>
-      <ul>
+      <ul class="footer__support">
         <li><b>Служба поддержки:</b></li>
-        <li><a href="tel:74996097696"></a></li>
+        <li><a href="tel:74996097696">74996097696</a></li>
         <li><a href="mailto:support@masterbinary.net">support@masterbinary.net</a></li>
         <li><a href="mailto:support@masterbinary.ru">support@masterbinary.ru</a></li>
       </ul>
+        <hr>
       <div class="footer__info">
         <div class="footer__left">
           <b>Уведомление о рисках:</b>
@@ -281,11 +282,18 @@
         <div class="footer__right">
           <p>Управление и платежный агент сайта http://masterbinary.ru компания Kurbanas UAB, регистрационный номер 304404840, местонахождение : 60 Laisves ave., Vilnius, m. sav, Lithuania.</p>
           <p>Компания TGI Intelligent Solution LTD а также сайт http://masterbinary.ru не оказывают какие-либо услуг гражданам и жителям США, Канады, Австралии, Бельгии, Франции, Турции, Израиля, Сирии, Судана, Ирана, Северной Кореи Японии, а также других стран и юрисдикций, где указанные услуг не могут быть оказаны в силу действующего законодательства.</p>
-          <a href="#"></a>
+          <a class="footer__appstore" href="#"></a>
+          <a class="footer__googleplay" href="#"></a>
+          <div class="footer__social">
+            <a class="footer__fb" href="#"></a>
+            <a class="footer__tw" href="#"></a>
+            <a class="footer__in" href="#"></a>
+            <a class="footer__yt" href="#"></a>
+          </div>
         </div>
       </div>
       <div class="footer__copyright">
-        <img src="logo-f" alt="MasterBinary">
+        <img src="logo-f.png" alt="MasterBinary">
         <p>Copyright ©2017 Master Binary.<br>All Rights Reserved.</p>
       </div>
     </div>
