--- a/mb/index.html
+++ b/mb/index.html
@@ -293,7 +293,7 @@
         </div>
       </div>
       <div class="footer__copyright">
-        <img src="logo-f.png" alt="MasterBinary">
+        <img src="img/logo-f.png" alt="MasterBinary">
         <p>Copyright ©2017 Master Binary.<br>All Rights Reserved.</p>
       </div>
     </div>
