--- a/bb/index.html
+++ b/bb/index.html
@@ -19,22 +19,11 @@
   <meta name="theme-color" content="#478aac">
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <div class="header__flex">
-        <img src="img/logo.svg" width="170" alt="BeBrokers">
-        <nav class="nav">
-          <ul>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">Log in</a></li>
-            <li><a href="#">Contacts</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-  </header>
   <section class="title">
     <div class="container">
+      <header>
+        <img src="img/logo.svg" width="135" alt="BeBrokers">
+      </header>
       <h1>Become a successful broker</h1>
       <b>Run your own Forex | CFD | Bitcoin Brand</b>
       <div class="title__links">
