popup all links

--- a/bb/index.html
+++ b/bb/index.html
@@ -114,7 +114,7 @@
       <p>In any situations all of our clients are to receive an immediate assistance on any issues, and two groups of professionals are in charge of it – Success and Support Groups.</p>
       <p>If you have troubles with the technical side of the platform, feel free to contact Support Group. They will lead you out of the dwell step by step and monitor the current situation. The Support Group constantly upgrade the platform’s software, as we are obliged to create the best business conditions for our clients and debug problems from the its appeal.</p>
       <p>The Success Group is ready to offer you required guidance on financial management, answer any of your questions and work with your on the profit optimization. Please, do not doubt if you should contact us, because we are client-oriented and will help you fully exploit your business potential and create personalized technologies and strategies.</p>
-      <a class="btn  btn--unclick btn--blue" href="#">Contact us</a>
+      <a class="btn  btn--unclick  btn--blue  btn--popup" href="#">Contact us</a>
     </div>
   </section>
   <section class="edge">
@@ -194,7 +194,7 @@
       <div class="footer__flex">
         <div class="footer__left">
           <img src="img/logo-w.svg" width="100" alt="BeBrokers">
-          <a class="btn  btn--unclick  btn--white" href="#">Contact Support</a>
+          <a class="btn  btn--unclick  btn--white  btn--popup" href="#">Contact Support</a>
         </div>
         <div class="footer__middle">
           <p>Build your Forex business with our cutting-edge technology. Be Brokers® provides you everything you need to build your brokerage from scratch in just 7 days.</p><br>
