popup all links

--- a/bb/index.html
+++ b/bb/index.html
@@ -27,7 +27,7 @@
       <h1>Become a successful broker</h1>
       <b>Run your own Forex | CFD | Bitcoin Brand</b>
       <div class="title__links">
-        <a class="btn  btn--click  btn--popup" href="#">Contact Us</a>
+        <a class="btn  btn--click  btn--popup" href="#">Contact us</a>
       </div>
     </div>
   </section>
@@ -194,7 +194,7 @@
       <div class="footer__flex">
         <div class="footer__left">
           <img src="img/logo-w.svg" width="100" alt="BeBrokers">
-          <a class="btn  btn--unclick  btn--white  btn--popup" href="#">Contact Support</a>
+          <a class="btn  btn--unclick  btn--white  btn--popup" href="#">Contact support</a>
         </div>
         <div class="footer__middle">
           <p>Build your Forex business with our cutting-edge technology. Be Brokers® provides you everything you need to build your brokerage from scratch in just 7 days.</p><br>
