add close popup button

--- a/bb/index.html
+++ b/bb/index.html
@@ -222,6 +222,7 @@
         <input type="tel" placeholder="Phone number">
         <textarea placeholder="Your message"></textarea>
         <button type="submit">Send</button>
+        <button class="popup__close" type="button" name="button"></button>
       </form>
     </div>
   </div>
